--- a/I2cTest/I2cTest.csproj
+++ b/I2cTest/I2cTest.csproj
@@ -1,12 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <OutputPath>..\Bin\GpioTest</OutputPath>
+    <OutputPath>..\Bin\I2cTest</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Iot.Device.Bindings" Version="1.0.0" />
     <PackageReference Include="NewLife.Core" Version="8.8.2020.701" />
     <PackageReference Include="System.Device.Gpio" Version="1.0.0" />
   </ItemGroup>
